--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                     <div class="animate__animated animate__fadeInLeft">
-                        <img src="assests/your-image.jpg" alt="Manish Singh Panwar" class="rounded-lg shadow-2xl w-full h-auto">
+                        <img src="your-image.jpg" alt="Manish Singh Panwar" class="rounded-lg shadow-2xl w-full h-auto">
                     </div>
                     
                     <div class="animate__animated animate__fadeInRight">
